create media querys

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <section>
   <div class="header">
     <h1>Intense Mint Dark Chocolate</h1>
+    <p><b>85% Cocoa</b><br>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+    <a class="btn">Buy now</a>
   </div>
-  <p><b>85% Cocoa</b><br>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-  <a class="btn">Buy now</a>
   <div>
-    <img src="images/placeholder-4by3.svg" alt="#">
+    <img class="img-flex" src="images/placeholder-4by3.svg" alt="#">
   </div>
 </section>
 </body>
